--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "heroku-cleanup": "npx playwright install [chromium]"
+    "heroku-cleanup": "npx playwright install chromium"
   },
   "keywords": [],
   "author": "",
